# projetx

./: .gitignore  .replit  AUDIT_COMPLET_APPLICATION.md  AUDIT_COMPLET_SOLIDARITES.md  CHECKLIST_MISE_A_JOUR_SECRETS.md  COMPARAISON_COMPLETE_AVANT_APRES.md  DEPENDANCES_ACTUELLES_COMPLETES.md  DIAGNOSTIC_SECRETS_20251031_145557.md  DIAGNOSTIC_SECRETS_20251031_145727.md  DOCUMENTATION_COMPLETE.md  ETAT_AVANCEMENT.md  GUIDE_COMPLET_PLATEFORMES_FONCTIONS_INTERCONNEXIONS.md  GUIDE_COMPLET_POSSIBILITES_REPLIT.md  GUIDE_CONFIGURATION_SUPABASE_DOUBLE.md  GUIDE_INSTALLATION_SUPABASE.md  GUIDE_MIGRATION_SECRETS_GITHUB_VERS_REPLIT.md  INDEX_RAPPORTS_20251029.md  INSTRUCTIONS_REDIS_URLS.md  MODELE_ARCHITECTURE_ULTRA_DETAILLE.md  NOUVELLES_APIS_RECOMMANDEES.md  PAGES_ACTUELLES_DETAILLEES.json  RAPPORT_AUDIT_API_20251025_194534.md  RAPPORT_AUDIT_API_20251025_203531.md  RAPPORT_AUDIT_API_20251025_203725.md  RAPPORT_AUDIT_API_20251025_203752.md  RAPPORT_AUDIT_API_20251025_205804.md  RAPPORT_AUDIT_API_20251025_205830.md  RAPPORT_AUDIT_API_20251025_205904.md  RAPPORT_AUDIT_API_20251025_210116.md  RAPPORT_AUDIT_API_20251025_210401.md  RAPPORT_AUDIT_API_20251025_210428.md  RAPPORT_AUDIT_API_20251025_210456.md  RAPPORT_AUDIT_API_20251025_210522.md  RAPPORT_AUDIT_API_20251025_210655.md  RAPPORT_AUDIT_API_20251025_210716.md  RAPPORT_AUDIT_API_20251025_210844.md  RAPPORT_AUDIT_API_20251025_210904.md  RAPPORT_AUDIT_API_20251025_210925.md  RAPPORT_AUDIT_API_20251025_211006.md  RAPPORT_AUDIT_API_20251025_211028.md  (+105 more)
attached_assets/: RAPPORT_TESTS_COMPLET_20251025_184221_1761421283692.md  (+21 more)
(+66 files in other folders)
