[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.1",
    "appwrite>=13.4.1",
    "flask>=3.1.2",
    "pygithub>=2.8.1",
    "pytest>=8.4.2",
    "python-gitlab>=6.5.0",
    "requests>=2.32.5",
    "resend>=2.17.0",
    "schedule>=1.2.2",
    "stripe>=13.0.1",
    "supabase>=2.22.2",
]
